# curious-containers

./: .env  .gitignore  README.md  patch_devdeps.sh
cc-agency/: NOTICE  README.md  pyproject.toml
cc-agency/cc_agency/: __init__.py  version.py
cc-agency/cc_agency/broker/: app.py  auth.py  jwt_token.py
cc-agency/cc_agency/broker/routes/: admin.py  nodes.py  red.py
cc-agency/cc_agency/commons/: cloud_proxy.py  conf.py  db.py  helper.py  secrets.py
cc-agency/cc_agency/commons/schemas/: callback.py  conf.py
cc-agency/cc_agency/controller/: __main__.py  docker.py  main.py  scheduler.py
cc-agency/cc_agency/tools/: __main__.py  main.py
cc-agency/cc_agency/tools/create_broker_user/: __main__.py  main.py
cc-agency/cc_agency/tools/create_db_user/: __main__.py  main.py
cc-agency/cc_agency/tools/drop_db_collections/: __main__.py  main.py
cc-agency/cc_agency/trustee/: app.py
cc-agency/dev/: cc-agency.yml  docker-compose.yml  uwsgi-broker.ini  uwsgi-trustee.ini
cc-agency/dev/mongo-seed/: Dockerfile
cc-agency/docker/: notes.md
cc-agency/docker/compose/: docker-compose.yml
cc-agency/docker/image_agency_broker/: Dockerfile  build.sh  cc-agency.yml  ccagency-broker.conf  ccagency-broker.ini  create_broker_user.py  start_broker.sh
cc-agency/docker/image_agency_controller/: Dockerfile  build.sh  ccagency-broker.ini  ccagency-trustee.ini  init-db.sh  requirements.txt
cc-agency/docker/image_agency_trustee/: Dockerfile  ccagency-trustee.ini
cc-agency/docker/image_httpd/: Dockerfile  build.sh  ccagency-broker.conf  ccagency-broker.ini
cc-agency/docker/image_mongodb/: Dockerfile  build.sh  mongo-init.js
cc-agency/docker/image_trustee_service/: Dockerfile  build.sh  cc-agency.yml  ccagency-broker.ini  ccagency-broker.service  ccagency-controller.service  ccagency-trustee.service  requirements.txt
cc-agency/tests/commons/: test_agency.py
cc-core/: NOTICE  README.md  pyproject.toml
cc-core/cc_core/: __init__.py  version.py
cc-core/cc_core/agent/: __main__.py  main.py
cc-core/cc_core/agent/blue/: __main__.py
cc-core/cc_core/agent/connectors/inputConnector/: __main__.py
cc-core/cc_core/agent/connectors/input_connector/: __main__.py
cc-core/cc_core/agent/connectors/outputConnector/: OutputConnector.py  __main__.py
cc-core/cc_core/agent/restricted_red/: __main__.py
cc-core/cc_core/commons/: agent_utils.py  cli_modes.py  command_builder.py  cwl_types.py  docker_utils.py  engines.py  exceptions.py  files.py  gpu_info.py  input_references.py  parsing.py  preparation.py  red.py  red_secrets.py  red_to_blue.py  red_to_restricted_red.py  schema_map.py  templates.py
cc-core/cc_core/commons/schemas/: __init__.py  auth.py  cli.py  connector.py  red.py
cc-core/cc_core/commons/schemas/engines/: container.py  execution.py
cc-core/tests/commons/: test_docker_utils.py  test_input_references.py
cc-faice/: NOTICE  README.md  pyproject.toml
cc-faice/cc_faice/: __init__.py  __main__.py  main.py  version.py
cc-faice/cc_faice/agency/: __main__.py  main.py  utility.py
cc-faice/cc_faice/agency/batch/: main.py
cc-faice/cc_faice/agency/batches/: __main__.py  main.py
cc-faice/cc_faice/agency/experiment/: main.py
cc-faice/cc_faice/agency/experiments/: main.py
cc-faice/cc_faice/agency/nodes/: main.py
cc-faice/cc_faice/agency/user/: main.py
cc-faice/cc_faice/agent/: __main__.py  main.py
cc-faice/cc_faice/agent/red/: __main__.py  main.py
cc-faice/cc_faice/commons/: compatibility.py  docker.py  templates.py
cc-faice/cc_faice/convert/: __main__.py  main.py
cc-faice/cc_faice/convert/batches/: __main__.py  main.py
cc-faice/cc_faice/convert/cwl/: __main__.py  main.py
cc-faice/cc_faice/convert/format/: __main__.py  main.py
cc-faice/cc_faice/exec/: __main__.py  main.py
cc-faice/cc_faice/execution_engine/: preparation.py  red_execution_engine.py
cc-faice/cc_faice/schema/: __main__.py  main.py
cc-faice/cc_faice/schema/list/: __main__.py  main.py
cc-faice/cc_faice/schema/show/: __main__.py  main.py
cc-faice/cc_faice/schema/validate/: __main__.py  main.py
cc-faice/tests/commons/: test_demo.py
cc-faice/tests/red_files/: container.red  execution.red  for_test_load_and_read.txt  hello_world.red  initial.red  input_output.red  no_outputs.red  outputs.red
dev-tools/: README.md  build_dev_images.sh  docker-compose.yml  patch_devdeps.sh
dev-tools/dev_broker_image/: Dockerfile
dev-tools/dev_controller_image/: Dockerfile
red-fill/: NOTICE  README.md  pyproject.toml
red-fill/red_fill/: __init__.py  fill_variables.py  version.py
red-fill/tests/: test_red_fill.py
red-val/: NOTICE  README.md  pyproject.toml
red-val/red_val/: __init__.py  exceptions.py  parsing.py  red_types.py  red_validation.py  red_variables.py  version.py
red-val/red_val/schemas/: cli.py  connector.py  engine.py  red.py
red-val/tests/: test_red_val.py
red-val/tests/files/: input_output.red
tests/: README.md  build_docker_images.sh  docker-compose.yml  integration_test.py  start_agency.sh  stop_agency.sh  test_basic_broker.py  test_batch.py  test_experiment.py  test_faice.py  test_notification_hook.py  test_setup.py
tests/input/: count.py  count_results.txt
tests/red/: failed.json  format_error.json  input_output.json  minimal.cwl  minimal.json  minimal.red  multi_batch.json  stderr.json  stdout.json
tests/setup/: build_docker_images.sh  cc-agency.yml  start_agency.sh
tests/setup/image_agency_broker/: Dockerfile  ccagency-broker.ini
tests/setup/image_agency_controller/: Dockerfile
tests/setup/image_agency_trustee/: Dockerfile  ccagency-trustee.ini
tests/setup/image_mongodb/: Dockerfile
