[tool.poetry]
name = "cc-agency"
version = "9.2.3"
authors = ["Christoph Jansen <Christoph.Jansen@htw-berlin.de>", "Bruno Schilling <Bruno.Schilling@student.htw-berlin.de>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/curious-containers/cc-agency"
homepage = "https://www.curious-containers.cc/"
description = "CC-Agency is part of the Curious Containers project. It connects to a cluster of docker-engines for the distributed execution of reproducible data-driven experiments defined in the RED format."

[tool.poetry.dependencies]
python = "^3.7"
flask = "^2.2"
pyzmq = "^23.0"
pymongo = "^3.7"
cryptography = "^41.0"
cc-core = "~9.2"
urllib3 = "^1.26"
Werkzeug = "^2.2.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
ccagency-controller = 'cc_agency.controller.main:main'
ccagency = 'cc_agency.tools.main:main'
