[tool.poetry]
name = "cc-core"
version = "9.1.0"
authors = ["Christoph Jansen <Christoph.Jansen@htw-berlin.de>", "Bruno Schilling <Bruno.Schilling@student.htw-berlin.de>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/curious-containers/cc-core"
homepage = "https://www.curious-containers.cc/"
description = "CC-Core is part of the Curious Containers project. It contains shared code of the CC-FAICE and CC-Agency packages."

[tool.poetry.dependencies]
python = "^3.5"
docker = "^4.0"
"ruamel.yaml" = "^0.16.5"

red-val = "~9.1"

[tool.poetry.dev-dependencies]
pytest = "^4.3"
