[tool.poetry]
name = "cc-core"
version = "9.2.3"
authors = ["Christoph Jansen <Christoph.Jansen@htw-berlin.de>", "Bruno Schilling <Bruno.Schilling@student.htw-berlin.de>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/curious-containers/cc-core"
homepage = "https://www.curious-containers.cc/"
description = "CC-Core is part of the Curious Containers project. It contains shared code of the CC-FAICE and CC-Agency packages."

[tool.poetry.dependencies]
python = "^3.7"
docker = "^6.0"
"ruamel.yaml" = "^0.17"
urllib3 = "^1.26"
red-val = "~9.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
