[tool.poetry]
name = "cc-faice"
version = "9.0.1"
authors = ["Christoph Jansen <Christoph.Jansen@htw-berlin.de>", "Bruno Schilling <Bruno.Schilling@student.htw-berlin.de>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/curious-containers/curious-containers"
homepage = "https://www.curious-containers.cc/"
description = "FAICE (Fair Collaboration and Experiments) is part of the Curious Containers project. It enables researchers to perform and distribute reproducible data-driven experiments defined in the RED format."

[tool.poetry.dependencies]
python = "^3.5"
cc-core = "~9.0"
red-fill = "~9.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
faice = 'cc_faice.main:main'
