[tool.poetry]
name = "cc-faice"
version = "9.2.3"
authors = ["Christoph Jansen <Christoph.Jansen@htw-berlin.de>", "Bruno Schilling <Bruno.Schilling@student.htw-berlin.de>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/curious-containers/curious-containers"
homepage = "https://www.curious-containers.cc/"
description = "FAICE (Fair Collaboration and Experiments) is part of the Curious Containers project. It enables researchers to perform and distribute reproducible data-driven experiments defined in the RED format."

[tool.poetry.dependencies]
python = "^3.7"
cc-core = "~9.2"
red-fill = "~9.2"
urllib3 = "^1.26"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
faice = 'cc_faice.main:main'
