[tool.poetry]
name = "red-fill"
version = "0.1.0"
description = ""
authors = ["Bluemi <bruno.schilling@protonmail.ch>"]

[tool.poetry.dependencies]
python = "^3.7"
keyring = "^19.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
