[tool.poetry]
name = "red-fill"
version = "9.1.0"
authors = ["Christoph Jansen <Christoph.Jansen@htw-berlin.de>", "Bruno Schilling <Bruno.Schilling@student.htw-berlin.de>"]
license = "LGPL-3.0"
readme = "README.md"
repository = "https://github.com/curious-containers/curious-containers"
homepage = "https://www.curious-containers.cc/"
description = "RED-fill is part of the Curious Containers project. It provides functionality to resolve template keys for RED clients."

[tool.poetry.dependencies]
python = "^3.5"
keyring = "^19.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
