[tool.poetry]
name = "red-fill"
version = "9.2.3"
authors = ["Christoph Jansen <Christoph.Jansen@htw-berlin.de>", "Bruno Schilling <Bruno.Schilling@student.htw-berlin.de>"]
license = "LGPL-3.0"
readme = "README.md"
repository = "https://github.com/curious-containers/curious-containers"
homepage = "https://www.curious-containers.cc/"
description = "RED-fill is part of the Curious Containers project. It provides functionality to resolve template keys for RED clients."

[tool.poetry.dependencies]
python = "^3.7"
keyring = "^23.8"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
